--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <title>coffeerun</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+    <style>
+      form :focus:required:invalid {
+        border-color: #a94442;
+      }
+    </style>
 </head>
 
 <body class="container">
@@ -17,11 +22,11 @@
                 <form id="main-form" data-coffee-order="form">
                     <div class="form-group">
                         <label for="coffeeOrder">Coffee Order</label>
-                        <input class="form-control" name="coffee" id="coffeeOrder" autofocus>
+                        <input class="form-control" name="coffee" id="coffeeOrder" autofocus required pattern="[a-zA-Z\s]+" />
                     </div>
                     <div class="form-group">
                         <label for="emailInput">Email</label>
-                        <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com">
+                        <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com" required />
                     </div>
                     <div class="radio">
                         <label>
@@ -43,8 +48,8 @@
                     </div>
                     <div class="radio">
                         <label>
-                        <input type="radio" name="size" value="coffeezilla">
-                        Coffee-zilla
+                        <input type="radio" name="size" value="bfc">
+                        BFC
                       </label>
                     </div>
                     <div class="form-group">
@@ -74,6 +79,13 @@
                 </form>
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4>Pending Orders:</h4>
+                <div data-coffee-order="checklist">
+                </div>
+            </div>
+        </div>
 
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
@@ -95,6 +107,8 @@
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="scripts/validation.js" charset="utf-8"></script>
+    <script src="scripts/checklist.js" charset="utf-8"></script>
     <script src="scripts/formhandler.js" charset="utf-8"></script>
     <script src="scripts/datastore.js" charset="utf-8"></script>
     <script src="scripts/truck.js" charset="utf-8"></script>
